--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
   "name": "math-expressions",
-  "version": "0.1.0",
-  "description": "App forgenerating and solving expressions.",
+  "version": "1.0.0",
+  "description": "App for generating and solving expressions.",
   "author": "autioch",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "clean-webpack-plugin": "^0.1.9",
-    "css-loader": "^0.23.1",
+    "autoprefixer": "^7.1.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.16.1",
-    "jquery": "^2.2.4",
-    "lodash.debounce": "^4.0.6",
-    "node-sass": "^3.7.0",
-    "postcss-loader": "^0.9.1",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.0"
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^1.3.3",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.2",
+    "template-minify-loader": "^1.0.0",
+    "webpack": "^1.15.0",
+    "webpack-livereload-plugin": "^0.11.0"
   },
   "scripts": {
-    "build": "webpack --config tools/webpack.config.js",
-    "build:watch": "webpack --config tools/webpack.config.js --watch",
-    "build:production": "webpack --config tools/webpack.config.js -p",
-    "serve": "node tools/server"
+    "build": "webpack --config tools/webpack.config.js -p",
+    "build:watch": "webpack --config tools/webpack.config.js --watch"
   }
 }
