--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
+    "lean-tag": "^1.0.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.5",
