--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
-    "lean-tag": "^1.0.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^1.3.3",
+    "preact": "^8.1.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
     "template-minify-loader": "^1.0.0",
