--- a/package.json
+++ b/package.json
@@ -5,36 +5,14 @@
   "author": "autioch",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^7.1.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.4",
-    "eslint-plugin-react": "^7.0.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^1.3.3",
-    "preact": "^8.1.0",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.18.2",
-    "template-minify-loader": "^1.0.0",
-    "webpack": "^1.15.0",
-    "webpack-livereload-plugin": "^0.11.0"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
-    "build": "webpack --config tools/webpack.config.js -p",
-    "build:watch": "webpack --config tools/webpack.config.js --watch",
-    "lint": "eslint ./src --ext .js --quiet --fix"
-  },
-  "devDependencies": {
-    "chai": "^4.0.2",
-    "eslint": "^3.19.0",
-    "eslint-config-qb": "^1.0.0",
-    "mocha": "^3.4.2",
-    "serve-local": "^1.0.0"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
