--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lodash": "^4.17.10",
     "moo": "^0.4.3",
     "nearley": "^2.13.0",
     "nearley-loader": "^2.0.0",
@@ -56,7 +57,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "grammar:compile": "nearleyc src/core.nearley/parse/grammar.ne -o src/core.nearley/parse/grammar.js"
   },
   "jest": {
     "collectCoverageFrom": [
