--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "autioch",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.5.4",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -16,6 +17,7 @@
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
     "css-loader": "0.28.7",
+    "deep-object-diff": "^1.1.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
