--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
+    "bluebird": "^3.5.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
@@ -43,10 +44,11 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
+    "randexp": "^0.4.9",
     "raw-loader": "^0.5.1",
-    "react": "^16.3.2",
+    "react": "^16.4.0",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.4.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -54,13 +56,14 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "grammar:compile": "nearleyc src/core.nearley/parse/grammar.ne -o src/core.nearley/parse/grammar.js"
+    "grammar:compile": "nearleyc src/core/grammar/grammar.ne -o src/core/grammar/grammar.js",
+    "test:core": "node --experimental-modules src/core/spec"
   },
   "jest": {
     "collectCoverageFrom": [
